# pogo-migrate

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  _typos.toml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml  tasks.py  unittest-compose.yml
.github/workflows/: publish.yml  style.yml  tests.yml
configuration/: index.html
docs/: configuration.md  index.md  testing.md  thanks.md  usage.md  why-pogo.md
search/: search_index.json
src/pogo_migrate/: cli.py  config.py  context.py  exceptions.py  migrate.py  migration.py  sql.py  squash.py  testing.py  topologicalsort.py  util.py  yoyo.py
testing/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_migrate.py  test_migration.py  test_sql.py  test_squash.py  test_testing.py  test_topological_sort.py  test_util.py  test_yoyo.py  util.py
tests/cli/: test_commands.py  test_parser.py
thanks/: index.html
usage/: index.html
why-pogo/: index.html
