[project]
name = "pogo-migrate"
version = "0.4.5"
description = "Database migration tool for asyncpg"
readme = "README.md"
authors = [
    {name = "Daniel Edgecombe", email = "daniel@nrwl.co"},
]
maintainers = [
    {name = "Daniel Edgecombe", email = "daniel@nrwl.co"},
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["migrations", "migrate", "database", "asyncpg", "yoyo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pogo-core >= 0.1.2",
    "rtoml >= 0.10",
    "sqlparse >= 0.5.2",
    "tabulate >= 0.9.0",
    "python-dotenv >= 1.0.0",
    "sqlglot >= 25.19",
]

[project.urls]
homepage = "https://github.com/NRWLDev/pogo-migrate"
documentation = "https://nrwldev.github.io/pogo-migrate/"

[project.optional-dependencies]
dev = [
    # Tests
    "asyncpg >= 0.31.0",
    "pytest-asyncio >= 1.3.0",
    "nest-asyncio2 >= 1.6.0",
    "pytest >= 9.0.2",
    "pytest-random-order >= 1.2.0",
    "pytest-cov >= 7.0.0",
    "pytest-env >= 0.8.1",
    "click >= 8.0.0",

    # Style
    "ruff >= 0.14.10",
    "pre-commit >= 3.7.1",
    "ty >= 0.0.17",

    # release
    "git-cliff>=2.12.0",
    "bumpversion-slim>=0.1.0",
]

[project.scripts]
pogo = "pogo_migrate.cli:main"

[tool.bumpversion]
current_version = "0.4.5"
allow_dirty = true
allow_missing = true
commit_extra = ["CHANGELOG.md"]
allowed_branches = [
    "main",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.git-cliff.bump]
features_always_bump_minor = false
breaking_always_bump_major = false

[tool.git-cliff.changelog]
header = """
# Changelog\n
"""
body = """
{% if version %}\
    ## {{ version  }} - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## Unreleased
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {% if commit.breaking %}**Breaking** {% endif %}\
        {{ commit.message | split(pat="\n") | first | upper_first | trim }}\
        {%- if commit.links %} {% for link in commit.links %}[{{link.text}}]({{link.href}}) {% endfor -%}{% endif %} \
        [[{{ commit.id | truncate(length=7, end="") }}](https://github.com/NRWLDev/pogo/commit/{{ commit.id }})]\
    {% endfor %}
{% endfor %}\n
"""
trim = true
footer = "<!-- generated by git-cliff -->"

[tool.git-cliff.git]
link_parsers = [
    { pattern = "#(\\d+)", href = "https://github.com/NRWLDev/pogo-migrate/issues/$1"},
]

commit_preprocessors = [
  # Remove issue numbers.
  { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]
commit_parsers = [
    { message = "^feat", group = "Features and Improvements" },
    { message = "^fix", group = "Bug fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^refactor", group = "Refactor" },
    { message = "^style", group = "Styling" },
    { message = "^test", group = "Miscellaneous" },
    { message = "^chore|^ci", group = "Miscellaneous" },
    { message = "^chore\\(deps.*\\)", skip = true },
]
sort_commits = "newest"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--random-order",
    "-p no:logging",
]
env = [
    "D:POSTGRES_DSN=postgres://unit:password@localhost:5435/unit",
]
filterwarnings = [
    "ignore:.*pogo_core.*:FutureWarning",
    "ignore:'asyncio.get_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning",
]
markers = [
    "nosync: don't apply pogo system tables to the database prior to the test",
]

[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true
exclude_lines = [
    "# pragma: no cover",
    "if t.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["src/pogo_migrate"]

[tool.ruff]
target-version = "py310"
line-length = 120
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "FIX",
    "TD003",
    "ERA",
    "E501",    # Handled by ruff format
    "ASYNC240",
]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001", "S"]
"src/pogo_migrate/cli.py" = ["UP007", "B008"]
"tests/*" = ["ANN", "D", "S105", "S106", "SLF", "DTZ005", "S101", "S608", "TD", "PLR0913"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.384",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pogo_migrate"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
output-format = "concise"

[tool.ty.src]
exclude = ["tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pogo]
migrations = './migrations'
database_config = '{POGO_DATABASE}'

[tool.pogo.squash]
exclude = ["a"]
